# 2022.0301

./: .gitmodules  AUTHORS  LICENSE  README.md
src/: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  before_script.sh  vcpkg.json
src/.devcontainer/: Dockerfile  devcontainer.json
src/.gitlab/merge_request_templates/: default.md
src/TueServer_results/: CG_overall_2021_06_03.csv  CG_overall_2021_06_04.csv  CG_overall_2021_06_10.csv  CG_overall_2021_06_12.csv  CG_overall_2021_06_12extra.csv  CG_overall_2021_06_17.csv  CG_overall_2021_06_18.csv  CG_overall_2021_06_30.csv  CG_overall_2021_07_07.csv  CG_overall_2021_07_08.csv  CG_overall_2021_07_09.csv  CG_overall_2021_07_10.csv  CG_overall_2021_07_11.csv  CG_overall_2021_07_13.csv  all_pessoa.csv  all_pessoa.xlsx  oliveira_100_2.csv  oliveira_100_4.csv  oliveira_50_2.csv  oliveira_overall.csv  opt.csv  results_2021_12_10.csv  results_2022_08_26.csv  results_2023_07_01.xlsx  summary.py  summary2.py  summary_methods.py
src/TueServer_results/template_dir/: comparision_lp_bound_computation.tex  template_table.tex
src/cmake/: CPM.cmake  CompilerWarnings.cmake  Conan.cmake  ConfigSafeGuards.cmake  FindGurobi.cmake  SetUpOsi.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  Vcpkg.cmake
src/include/: BackwardBDD.hpp  BackwardZDD.hpp  BddCoeff.hpp  BranchBoundTree.hpp  BranchNode.hpp  CardinalityPaths.hpp  Column.h  DebugLvl.hpp  FarkasBDD.hpp  ForwardBDD.hpp  ForwardZDD.hpp  Instance.h  Interval.h  Job.h  Label.hpp  LocalSearch.hpp  MIP_defs.hpp  MipGraph.hpp  ModelInterface.hpp  NodeBdd.hpp  NodeData.h  Parms.h  PricerConstruct.hpp  PricerEvaluateBdd.hpp  PricerEvaluateZdd.hpp  PricerSolverArcTimeDP.hpp  PricerSolverBase.hpp  PricerSolverBdd.hpp  PricerSolverBddBackward.hpp  PricerSolverBddForward.hpp  PricerSolverSimpleDP.hpp  PricerSolverZdd.hpp  PricerSolverZddBackward.hpp  PricerSolverZddForward.hpp  PricingSolution.hpp  PricingStabilization.hpp  Problem.h  SeperationSolver.hpp  Solution.hpp  Statistics.h  (+5 more)
src/instances/wt150/: vv.sh
src/results/: oliveira_40_2.csv  oliveira_40_4.csv  oliveira_50_4.csv  oliveira_overall.csv
src/results/CG_results_20190301/: CG_allinstances_20190301.csv  CG_overall_20190301.csv  CG_summary_20190301.csv  CG_tables_20190301.tex
src/results/CG_results_20190828/: CG_allinstances_20190828.csv  CG_overall_20190828.csv  CG_summary_20190828.csv  CG_tables_20190828.tex  PMRelease
src/results/CG_results_20190829/: CG_allinstances_20190829.csv  CG_overall_20190829.csv  CG_summary_20190829.csv  CG_tables_20190829.tex
src/results/CG_results_20191004/: CG_allinstances_20191004.csv  CG_overall_20191004.csv  CG_summary_20191004.csv  CG_tables_20191004.tex  PMRelease
src/results/CG_results_20191022/: CG_allinstances_20191022.csv  CG_overall_20191022.csv  CG_summary_20191022.csv  CG_tables_20191022.tex  overall_size.csv
src/results/CG_results_20191024/: CG_allinstances_20191024.csv  CG_overall_20191024.csv  CG_summary_20191024.csv  CG_tables_20191024.tex
src/results/CG_results_20200504/: CG_allinstances_20200504.csv  CG_summary_20200504.csv  CG_tables_template.tex
src/results/CG_results_20200622/: CG_allinstances_20200622.csv  CG_overall_20200622.csv  CG_summary_20200622.csv  CG_tables_20200622.tex  wiley-networks.cls
src/results/CG_results_21_04_22/: CG_allinstances_21_04_22.csv  CG_summary_21_04_22.csv  CG_tables_21_04_22.tex  profile_curve40_2.tex  profile_curve40_4.tex  profile_curve50_2.tex  profile_curve50_4.tex  profile_curve_overall.tex
src/results/MIP_results_20191010/: MIP_overall_20191010.csv
src/results/results_2021_06_12/: CG_allinstances_2021_06_12.csv  CG_tables_2021_06_12.tex  profile_curve_overall_2021_06_12.tex  profile_curve_overall_40_2_2021_06_12.tex  profile_curve_overall_40_4_2021_06_12.tex  profile_curve_overall_50_2_2021_06_12.tex  profile_curve_overall_50_4_2021_06_12.tex
src/results/results_2021_06_15/: CG_allinstances_2021_06_15.csv  CG_tables_2021_06_15.tex  profile_curve_overall_2021_06_15.tex  profile_curve_overall_40_2_2021_06_15.tex  profile_curve_overall_40_4_2021_06_15.tex  profile_curve_overall_50_2_2021_06_15.tex  profile_curve_overall_50_4_2021_06_15.tex
src/results/results_2021_06_18/: CG_allinstances_2021_06_18.csv  CG_tables_2021_06_18.tex  profile_curve_overall_2021_06_18.tex  profile_curve_overall_40_2_2021_06_18.tex  profile_curve_overall_40_4_2021_06_18.tex  profile_curve_overall_50_2_2021_06_18.tex  profile_curve_overall_50_4_2021_06_18.tex
src/results/results_2021_06_23/: CG_allinstances_2021_06_23.csv  (+7 more)
src/scripts/: bks_to_json.py  color_cuts.py  control.py  exedir.py  generate.py  lp_models.py  mip.sh  profile_curve_overall_21_04_22.tex  run_experiments.ps1  summary.ipynb  summary.py
src/settings/: default_settings_10.json  default_settings_8.json  default_settings_BDD.json  default_settings_BDDSimple.json  default_settings_small.json  generate_settings.py
src/sol/: wt040_006.json  wt040_011.json  wt040_026.json  wt040_041.json  wt040_061.json  wt040_086.json  wt040_101.json  wt040_116.json  wt050_011.json  wt050_021.json  wt050_036.json  wt050_041.json  wt050_061.json  wt050_071.json  wt050_086.json  wt050_121.json  wt100_011.json  wt100_016.json  wt100_026.json  wt100_036.json  wt100_046.json  wt100_066.json  wt100_086.json  wt100_116.json
src/src/: BddCoeff.cpp  BranchBoundTree.cpp  BranchNode.cpp  Column.cpp  IO.cpp  Instance.cpp  Interval.cpp  Job.cpp  LocalSearch.cpp  Lowerbound.cpp  Model.cpp  ModelInterface.cpp  NodeBdd.cpp  NodeData.cpp  Parms.cpp  PricerSolverArcTimeDP.cpp  PricerSolverBase.cpp  PricerSolverBdd.cpp  PricerSolverBddBackward.cpp  PricerSolverBddForward.cpp  PricerSolverSimpleDP.cpp  PricerSolverWrappers.cpp  PricerSolverZdd.cpp  PricerSolverZddBackward.cpp  PricerSolverZddForward.cpp  PricingStabilization.cpp  Problem.cpp  SeperationSolver.cpp  Solution.cpp  StabilizationWrappers.cpp  Statistics.cpp  VariableKeyBase.cpp  ZeroHalfCuts.cpp  ZeroHalfSystem.cpp  knapsack.c  main.cpp
(+203 files in other folders)
